# FoxBook

./: LICENSE  README.md
FoxBook-py/: .gitignore  pyproject.toml
FoxBook-py/fox_book/: .gitignore  fly.toml  manage.py  pyproject.toml  requirements.txt
FoxBook-py/fox_book/accounts/: manager.py  models.py  serializers.py  urls.py  utils.py  views.py
FoxBook-py/fox_book/accounts/api/: urls.py  views.py
FoxBook-py/fox_book/accounts/migrations/: 0001_initial.py  0002_rename_registration_date_user_date_joined_and_more.py  0003_onetimepassword.py  0004_passwordreset.py
FoxBook-py/fox_book/books/: models.py  serializers.py  urls.py  views.py
FoxBook-py/fox_book/books/migrations/: 0001_initial.py  0002_alter_book_annotation_alter_book_cover_and_more.py  0002_alter_book_type.py  0003_rename_genres_book_genre.py  0004_book_pages.py  0005_alter_book_rating.py
FoxBook-py/fox_book/fox_book/: asgi.py  settings.py  urls.py  wsgi.py
FoxBook-py/fox_book/fox_book/templates/: email_template.html
FoxBook-py/fox_book/static/: staticfiles.json
FoxBook-py/fox_book/users/: models.py  serializers.py  urls.py  views.py
FoxBook-py/fox_book/users/migrations/: 0001_initial.py  0002_library.py  0003_alter_library_reading_progress.py  0004_alter_library_reading_progress.py  0005_alter_library_reading_progress_and_more.py  0006_readingsettings.py  0007_alter_readingsettings_bg_color_and_more.py  0008_alter_library_reading_progress.py  0009_alter_library_reading_progress.py  0010_alter_library_reading_progress.py  0011_alter_library_user_rating.py  0012_alter_library_user_rating.py  (+1 more)
(+129 files in other folders)
